# mthds-python

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLI.md  CONTRIBUTING.md  Makefile  README.md  TODOS.md  pyproject.toml
.claude/skills/release/: SKILL.md
.github/workflows/: changelog-check.yml  cla.yml  guard-branches.yml  lint-check.yml  package-check.yml  publish.yml  tests-check.yml  version-check.yml
docs/: client.md  runners.md
examples/: invoice_reimbursement.mthds  run_lifecycle_demo.py
mthds/: METHODS.toml  _compat.py  _serialization.py  bundle.mthds  client.py  config.py  exceptions.py  pipeline.py  protocol.py
mthds/_utils/: pydantic_utils.py  string_utils.py  toml_utils.py
mthds/cli/: _console.py  app.py
mthds/cli/commands/: _lock_helpers.py  add_cmd.py  build_cmd.py  config_cmd.py  init_cmd.py  install_cmd.py  list_cmd.py  lock_cmd.py  publish_cmd.py  run_cmd.py  setup_cmd.py  update_cmd.py  validate_cmd.py
mthds/cli/commands/package/: __init__.py  _lock_helpers.py  add_cmd.py  app.py  init_cmd.py  install_cmd.py  list_cmd.py  lock_cmd.py  update_cmd.py
mthds/client/: client.py  exceptions.py  pipeline.py  protocol.py  protocol_models.py  runs.py
mthds/client/models/: pipe_output.py  pipeline_inputs.py  stuff.py  working_memory.py
mthds/config/: credentials.py
mthds/models/: pipe_output.py  pipeline_inputs.py  stuff.py  working_memory.py
mthds/package/: bundle_metadata.py  bundle_scanner.py  dependency_resolver.py  discovery.py  exceptions.py  installed_methods.py  lock_file.py  package_cache.py  package_contents.py  semver.py  vcs_resolver.py  visibility.py
mthds/package/manifest/: parser.py  schema.py  validation.py
mthds/protocol/: __init__.py  concept.py  exceptions.py  models.py  pipe_output.py  pipeline_inputs.py  protocol.py  stuff.py  working_memory.py
mthds/runners/: __init__.py  api_runner.py  exceptions.py  pipelex_runner.py  registry.py  results.py  types.py
mthds/runners/api/: __init__.py  client.py  exceptions.py  models.py  runs.py
mthds/runners/pipelex/: __init__.py  runner.py
tests/: test_manifest.py
tests/fixtures/: config_dialect_cases.json
tests/integration/: test_add_cmd.py  test_build_cmd.py  test_config_cmd.py  test_config_integration.py  test_credentials_integration.py  test_install_cmd.py  test_list_cmd.py  test_lock_cmd.py  test_lock_helpers.py  test_run_cmd.py  test_update_cmd.py  test_validate_cmd.py
tests/unit/: test_api_runner_lifecycle.py  test_api_runner_models.py  test_api_runner_protocol.py  test_api_runner_wire_parsing.py  test_client_exceptions.py  test_client_lifecycle.py  test_client_protocol.py  test_config.py  test_config_dialect.py  test_credentials.py  test_credentials_migration.py  test_data.py  test_dependency_resolver.py  test_exceptions.py  test_installed_methods.py  test_lock_file.py  test_manifest.py  test_methods_package.py  test_package_cache.py  test_pipelex_runner.py  test_qualified_ref.py  test_resolve_directory.py  test_run_cmd.py  test_runner_exceptions.py  test_runners.py  test_runs.py  test_semver.py  test_validate_cmd.py  test_validation_contract.py  test_vcs_resolver.py  test_visibility.py
