[project]
name = "mthds"
version = "0.0.1"
description = "The Python interface for methods — base structures for structured outputs and the base runner for executing methods via API."
authors = [{ name = "Evotis S.A.S.", email = "oss@pipelex.com" }]
maintainers = [{ name = "Pipelex staff", email = "oss@pipelex.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.15"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "pydantic>=2.10.6,<3.0.0",
    "backports.strenum>=1.3.0 ; python_version < '3.11'",
    "httpx>=0.23.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
    "mypy==1.19.1",
    "pyright==1.1.408",
    "pylint==4.0.4",
    "ruff==0.14.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.urls]
Homepage = "https://mthds.ai"
Repository = "https://github.com/mthds-ai/mthds"
Documentation = "https://docs.mthds.ai/"
Changelog = "https://github.com/mthds-ai/mthds/releases"

[tool.mypy]
check_untyped_defs = true
exclude = "^.*\\.venv/.*$"
mypy_path = "."
packages = ["mthds"]
plugins = ["pydantic.mypy"]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "backports.strenum",
    "filetype",
    "json2html",
    "pypdfium2",
    "pypdfium2.raw",
]

[tool.pyright]
pythonVersion = "3.11"
include = ["mthds"]
exclude = ["**/__pycache__", ".venv", ".git", "build", "dist"]
analyzeUnannotatedFunctions = true
deprecateTypingAliases = false
disableBytesTypePromotions = true
enableExperimentalFeatures = false
enableTypeIgnoreComments = true
extraPaths = ["./tests"]
reportAbstractUsage = "error"
reportArgumentType = "error"
reportAssertAlwaysTrue = "error"
reportAssertTypeFailure = "error"
reportAssignmentType = "error"
reportAttributeAccessIssue = "error"
reportCallInDefaultInitializer = true
reportCallIssue = "error"
reportConstantRedefinition = "error"
reportDeprecated = "error"
reportDuplicateImport = "error"
reportFunctionMemberAccess = "error"
reportGeneralTypeIssues = "error"
reportImplicitOverride = true
reportImplicitStringConcatenation = false
reportImportCycles = true
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportIncompleteStub = "error"
reportInconsistentConstructor = "error"
reportInconsistentOverload = "error"
reportIndexIssue = "error"
reportInvalidStringEscapeSequence = "error"
reportInvalidStubStatement = "error"
reportInvalidTypeArguments = "error"
reportInvalidTypeForm = "error"
reportInvalidTypeVarUse = "error"
reportMatchNotExhaustive = "error"
reportMissingImports = "error"
reportMissingModuleSource = "warning"
reportMissingParameterType = "error"
reportMissingSuperCall = "none"
reportMissingTypeArgument = "error"
reportMissingTypeStubs = false
reportNoOverloadImplementation = "error"
reportOperatorIssue = "error"
reportOptionalCall = "error"
reportOptionalContextManager = "error"
reportOptionalIterable = "error"
reportOptionalMemberAccess = "error"
reportOptionalOperand = "error"
reportOptionalSubscript = "error"
reportOverlappingOverload = "error"
reportPossiblyUnboundVariable = "error"
reportPrivateImportUsage = "error"
reportPrivateUsage = "error"
reportPropertyTypeMismatch = true
reportRedeclaration = "error"
reportReturnType = "error"
reportSelfClsParameterName = "error"
reportTypeCommentUsage = "error"
reportTypedDictNotRequiredAccess = "error"
reportUnboundVariable = "error"
reportUndefinedVariable = "error"
reportUninitializedInstanceVariable = "none"
reportUnknownArgumentType = "error"
reportUnknownLambdaType = "error"
reportUnknownMemberType = "error"
reportUnknownParameterType = "error"
reportUnknownVariableType = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryContains = "error"
reportUnnecessaryIsInstance = "error"
reportUnnecessaryTypeIgnoreComment = "none"
reportUnsupportedDunderAll = "error"
reportUntypedBaseClass = "error"
reportUntypedClassDecorator = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedNamedTuple = "error"
reportUnusedCallResult = "none"
reportUnusedClass = "error"
reportUnusedCoroutine = "error"
reportUnusedExcept = "error"
reportUnusedExpression = "error"
reportUnusedFunction = "error"
reportUnusedImport = "none"
reportUnusedVariable = "error"
reportWildcardImportFromLibrary = "error"
strictDictionaryInference = true
strictListInference = true
strictParameterNoneValue = true
strictSetInference = true
typeCheckingMode = "strict"

[tool.ruff]
exclude = [
    ".cursor",
    ".git",
    ".github",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
]

line-length = 150
target-version = "py311"

[tool.ruff.format]

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "ANN201",   # Missing return type annotation for public function `my_func`
    "ANN202",   # Missing return type annotation for private function `my_func`
    "ANN204",   # Missing return type annotation for special method `my_func`
    "ANN206",   #  Missing return type annotation for classmethod `my_func`
    "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed in `...`
    "ASYNC230", # Async functions should not open files with blocking methods like `open`
    "ASYNC240", # Async functions should not use pathlib.Path methods, use trio.Path or anyio.path

    "B903", # Class could be dataclass or namedtuple

    "C901",   # Is to complex
    "COM812", # Checks for the absence of trailing commas.

    "CPY001", # Missing copyright notice at top of file

    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
    "D205", # 1 blank line required between summary line and description
    "D400", # First line should end with a period
    "D401", # First line of docstring should be in imperative mood: "My docstring...."
    "D404", # First word of the docstring should not be "This"
    "D415", # First line should end with a period, question mark, or exclamation point

    "DOC201", # `return` is not documented in docstring
    "DOC202", # Docstring should not have a returns section because the function doesn't return anything
    "DOC402", # `yield` is not documented in docstring
    "DOC502", # Raised exception is not explicitly raised: `FileNotFoundError`
    "DOC501", # Raised exception `ModuleFileError` missing from docstring

    "DTZ001", # `datetime.datetime()` called without a `tzinfo` argument
    "DTZ005", # `datetime.datetime.now()` called without a `tz` argument

    "ERA001", # Found commented-out code

    "FBT001", # Boolean-typed positional argument in function definition
    "FBT002", # Boolean default positional argument in function definition
    "FBT003", #Boolean positional value in function call

    "FIX002", # Line contains TODO, consider resolving the issue

    "FURB101", # `open` and `read` should be replaced by `Path(file_path.path).read_text(encoding="utf-8")`
    "FURB113", # Checks for consecutive calls to append.
    "FURB152", # Checks for literals that are similar to constants in math module.

    "LOG004", # `.exception()` call outside exception handlers

    "PLC0105", # `TypeVar` name "SomethingType" does not reflect its covariance; consider renaming it to "SomethingType_co"
    "PLC1901", # Checks for comparisons to empty strings.

    "PLR0904", # Too many public methods ( > 20)
    "PLR0911", # Too many return statements (/6)
    "PLR0912", # Too many branches (/12)
    "PLR0913", # Too many arguments in function definition (/5)
    "PLR0914", # Too many local variables ( /15)
    "PLR0915", # Too many statements (/50)
    "PLR0917", # Too many positional arguments ( /5)
    "PLR2004", # Magic value used in comparison, consider replacing `2` with a constant variable
    "PLR6301", # Too many return statements in `for` loop
    "PLR1702", # Too many nested blocks ( > 5)

    "PT013", # Incorrect import of `pytest`; use `import pytest` instead

    "PTH100", # `os.path.abspath()` should be replaced by `Path.resolve()`
    "PTH103", # `os.makedirs()` should be replaced by `Path.mkdir(parents=True)`
    "PTH107", # `os.remove()` should be replaced by `Path.unlink()`
    "PTH109", # `os.getcwd()` should be replaced by `Path.cwd()`
    "PTH118", # `os.path.join()` should be replaced by `Path` with `/` operator
    "PTH120", # `os.path.dirname()` should be replaced by `Path.parent`
    "PTH110", # `os.path.exists()` should be replaced by `Path.exists()`
    "PTH112", # `os.path.isdir()` should be replaced by `Path.is_dir()`
    "PTH119", # `os.path.basename()` should be replaced by `Path.name`
    "PTH123", # `open()` should be replaced by `Path.open()`
    "PTH208", # Use `pathlib.Path.iterdir()` instead.

    "PYI051", # `Literal["auto"]` is redundant in a union with `str`

    "RET505", # superfluous-else-return

    "RUF001", # String contains ambiguous `′` (PRIME). Did you mean ``` (GRAVE ACCENT)?
    "RUF003", # Comment contains ambiguous `’` (RIGHT SINGLE QUOTATION MARK). Did you mean ``` (GRAVE ACCENT)?
    "RUF022", # Checks for __all__ definitions that are not ordered according to an "isort-style" sort.

    "SIM105", # Use `contextlib.suppress(ValueError)` instead of `try`-`except`-`pass`
    "SIM108", # Use ternary operator `description = func.__doc__.strip().split("\n")[0] if func.__doc__ else func.__name__` instead of `if`-`else`-block

    "S101", # Use of `assert` detected
    "S102", # Use of `exec` detected
    "S106", # Possible hardcoded password assigned to argument: "secret"
    "S105", # Possible hardcoded password assigned to: "child_secret"

    "S311", # Cryptographically weak pseudo-random number generator

    "TD002", # Missing author in TODO; try: `# TODO(<author_name>): ...` or `# TODO @<author_name>: ...`
    "TD003", # Missing issue link for this TODO

    "T201", # `print` found

    # TODO: stop ignoring these rules
    "BLE001",  # Do not catch blind exception: `Exception`
    "B027",    # Checks for empty methods in abstract base classes without an abstract decorator.
    "UP007",   # Use `X | Y` for type annotations
    "UP036",   # Version block is outdated for minimum Python version
    "SIM102",  # Use a single `if` statement instead of nested `if` statements
    "S701",    # Using jinja2 templates with `autoescape=False` is dangerous and can lead to XSS. Ensure `autoescape=True` or use the `select_autoescape` function.
    "TRY301",  # Abstract `raise` to an inner function
    "PERF401", # Use a list comprehension to create a transformed list
    "PLW2901", # `for` loop variable `line` overwritten by assignment target
    "TRY300",  # Consider moving this statement to an `else` block
    "UP035",   # `typing.List` is deprecated, use `list` instead
    "RET503",  # Missing explicit `return` at the end of function able to return non-`None` value
    "UP017",   # Use `datetime.UTC` alias - but UTC only available in Python 3.11+
]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "INP001", # Allow test files to not have __init__.py in their directories (avoids namespace collisions)
]

[tool.uv]
required-version = ">=0.7.2"

[tool.pylint.main]
py-version = "3.11"
reports = false

[tool.pylint.messages_control]
disable = ["all"]
enable = [
    "W0101", # Unreachable code: Used when there is some code behind a "return" or "raise" statement, which will never be accessed.
    "C0103", # invalid-name (naming convention)
]
ignore = [".venv", "__pycache__", "build", "dist", ".git"]

[tool.pylint.basic]
# Variables / attributes / arguments: snake_case, not length 1
variable-rgx = "^(?!.$)[a-z_][a-z0-9_]*$"
argument-rgx = "^(?!.$)[a-z_][a-z0-9_]*$"
attr-rgx = "^(?!.$)[a-z_][a-z0-9_]*$"

# Functions / methods: snake_case, not length 1
function-rgx = "^(?!.$)[a-z_][a-z0-9_]*$"
method-rgx = "^(?!.$)[a-z_][a-z0-9_]*$"

# Classes: CapWords, not length 1
class-rgx = "^(?!.$)[A-Z_][a-zA-Z0-9_]*$"
typevar-rgx = "^[A-Za-z_][A-Za-z0-9_]*$"
good-names = ["_"]
